--- a/page3.html
+++ b/page3.html
@@ -59,7 +59,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/x">free css templates</a></section><section class="tabs3 cid-r8kyKKhC4l" id="tabs3-i">
+<section class="engine"><a href="https://mobirise.info/y">html web templates</a></section><section class="tabs3 cid-r8kyKKhC4l" id="tabs3-i">
 
     
 
@@ -126,7 +126,7 @@
                     <div class="row tab-content-row">
                         <div class="col-xs-12 col-md-6 col-lg-4">
                             <div class="card-img ">
-                                <span class="mbri-bootstrap mbr-iconfont"></span>
+                                <span class="mbr-iconfont mbri-cash"></span>
                             </div>
                             <h4 class="mbr-element-title  align-center mbr-fonts-style pb-2 display-5">
                                 Finance and Accounts</h4>
@@ -135,7 +135,7 @@
 
                         <div class="col-xs-12 col-md-6 col-lg-4">
                             <div class="card-img ">
-                                <span class="mbri-bootstrap mbr-iconfont"></span>
+                                <span class="mbr-iconfont mbri-laptop"></span>
                             </div>
                             <h4 class="mbr-element-title  align-center mbr-fonts-style pb-2 display-5">
                                 CRM</h4>
@@ -144,7 +144,7 @@
 
                         <div class="col-xs-12 col-md-6 col-lg-4">
                             <div class="card-img ">
-                                <span class="mbri-bootstrap mbr-iconfont"></span>
+                                <span class="mbr-iconfont mbri-devices"></span>
                             </div>
                             <h4 class="mbr-element-title  align-center mbr-fonts-style pb-2 display-5">
                                 Tech Support</h4>
