--- a/page3.html
+++ b/page3.html
@@ -59,7 +59,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/h">create a web page</a></section><section class="tabs3 cid-r8kyKKhC4l" id="tabs3-i">
+<section class="engine"><a href="https://mobirise.info/p">site templates free download</a></section><section class="tabs3 cid-r8kyKKhC4l" id="tabs3-i">
 
     
 
@@ -67,8 +67,7 @@
 
     <div class="container">
         <h2 class="mbr-section-title align-center pb-3 mbr-fonts-style display-2"></h2>
-        <h3 class="mbr-section-subtitle  display-5 align-center mbr-light mbr-fonts-style">
-            <strong><br><br>What We Do</strong></h3>
+        
     </div>
     <div class="container-fluid">
         <div class="row tabcont">
@@ -91,7 +90,7 @@
                     <div class="row tab-content-row">
                         <div class="col-xs-12 col-md-6 col-lg-4">
                             <div class="card-img ">
-                                <span class="mbri-responsive mbr-iconfont"></span>
+                                <span class="mbr-iconfont mbri-mobile"></span>
                             </div>
                             <h4 class="mbr-element-title  align-center mbr-fonts-style pb-2 display-5">Telecom</h4>
                             <p class="mbr-section-text  align-center mbr-fonts-style display-7"><br><br>&nbsp; Telemarketing lead management&nbsp;<br>	                 &nbsp; Product Promotion<br><br>&nbsp; Lead Generation<br><br>&nbsp; Research Surveys and Polling telemarketing<br>&nbsp; Lead List<br><br>&nbsp; Customer Satisfaction<br><br>&nbsp; Decision Maker Contacts&nbsp;<br><br>&nbsp; Telephone and Web Based<br><br>&nbsp; Human Capital Management
@@ -101,7 +100,7 @@
 
                         <div class="col-xs-12 col-md-6 col-lg-4">
                             <div class="card-img ">
-                                <span class="mbri-responsive mbr-iconfont"></span>
+                                <span class="mbr-iconfont mbri-growing-chart"></span>
                             </div>
                             <h4 class="mbr-element-title  align-center mbr-fonts-style pb-2 display-5">Banking / FSS (Retail Banking, Mortgage, Credit Cards, travels &amp; tourism)</h4>
                             <p class="mbr-section-text  align-center mbr-fonts-style display-7">Airline ticketing and reservations</p><p>Lead generation&nbsp;<br></p><p>Customer service management for      international banks, software firms, telecom    service providers&nbsp;<br><br>Human Capital Management<br><br>Data Base Management</p>
@@ -109,7 +108,7 @@
 
                         <div class="col-xs-12 col-md-6 col-lg-4">
                             <div class="card-img ">
-                                <span class="mbri-responsive mbr-iconfont"></span>
+                                <span class="mbr-iconfont mbri-setting"></span>
                             </div>
                             <h4 class="mbr-element-title  align-center mbr-fonts-style pb-2 display-5">
                                 Services</h4>
