--- a/page4.html
+++ b/page4.html
@@ -63,7 +63,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/g">build your own website for free</a></section><section class="cid-r8kQlQVpae mbr-parallax-background" id="footer2-n">
+<section class="engine"><a href="https://mobirise.info/r">bootstrap templates</a></section><section class="cid-r8kQlQVpae mbr-parallax-background" id="footer2-n">
 
     
 
@@ -72,8 +72,7 @@
     <div class="container">
         <div class="media-container-row content mbr-white">
             <div class="col-12 col-md-3 mbr-fonts-style display-7">
-                <p class="mbr-text"><br><br><strong><br></strong><br><strong>Address</strong>&nbsp;<br>Metricvault  Infosoft Pvt 
-<br>Near police Station,Ground Floor, 1 Town, Kurnool-508002, AP&nbsp;<br>&nbsp;<br>
+                <p class="mbr-text"><br><br><strong><br></strong><br><strong>Address</strong>&nbsp;<br>Metricvault Pvt .Ltd<br>Near police Station,Ground Floor, Town, Kurnool-508002, AP&nbsp;<br>&nbsp;<br>
                     <br>
                     <br><strong>Contacts</strong>
                     <br>
@@ -83,7 +82,7 @@
                 <p class="mbr-text"></p>
             </div>
             <div class="col-12 col-md-6">
-                <div class="google-map"></div>
+                <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyAEIpgj38KyLFELm2bK9Y7krBkz1K-cMq8&amp;q=place_id:ChIJ26ne4IndtTsRYXDSAbufbH8" allowfullscreen=""></iframe></div>
             </div>
         </div>
         <div class="footer-lower">
@@ -125,7 +124,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thanks for filling out the form!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="TjyaF8eRhM7BTJ86fIlMMiBcLwjH9CDFxxJYy0sVvHiSmM4KgA8QKOKg4okIV7AFvOqvAJdQ3kkWGy8pecjihcJDckiIQddfgdHRf3nFWSyfS2dHyBnLDiaCcQ2+sT4w">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="mYZSl+b16MCZeFforRU/ETaJFNJLW0HcT6xKs3aDok/Wz5E3x5Ul+pvGyCCdYPHl087+4Nd/J+ptWMzbzKoarUA9NeUOlaGFcjo19qFoYorPoRkDJLow11nEDq6A0dBa">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
