--- a/page4.html
+++ b/page4.html
@@ -63,7 +63,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/r">bootstrap templates</a></section><section class="cid-r8kQlQVpae mbr-parallax-background" id="footer2-n">
+<section class="engine"><a href="https://mobirise.info/e">how to make your own website</a></section><section class="cid-r8kQlQVpae mbr-parallax-background" id="footer2-n">
 
     
 
@@ -82,7 +82,7 @@
                 <p class="mbr-text"></p>
             </div>
             <div class="col-12 col-md-6">
-                <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyAEIpgj38KyLFELm2bK9Y7krBkz1K-cMq8&amp;q=place_id:ChIJ26ne4IndtTsRYXDSAbufbH8" allowfullscreen=""></iframe></div>
+                <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCy9r70T3NYf3PhvVflTo0_zdif2_IoIYs&amp;q=place_id:ChIJ26ne4IndtTsRYXDSAbufbH8" allowfullscreen=""></iframe></div>
             </div>
         </div>
         <div class="footer-lower">
@@ -124,7 +124,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thanks for filling out the form!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="mYZSl+b16MCZeFforRU/ETaJFNJLW0HcT6xKs3aDok/Wz5E3x5Ul+pvGyCCdYPHl087+4Nd/J+ptWMzbzKoarUA9NeUOlaGFcjo19qFoYorPoRkDJLow11nEDq6A0dBa">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="KQZ/mZtO0AE8yQXn9CyGWn1frP3TuHRPvxzltLmyWK73Q5TtF+J/LofYeDcQeKHOo6G74q2tsm26upq/SL1yDgvolTYfsIxkCQSrMooFRCuZy8zrelm+hY17Xkq1WbxB">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
